@@ -1,3 +1,14 @@
+2020-07-03  Andreas Scherer  <https://ascherer.github.io>
+
+	* xetex.web: Fix |code| snippets in {comments}.
+
+2020-07-03  David Jones  <dmj@ams.org>
+
+	* XeTeXOTMath.cpp: New implementation of get_ot_math_kern().
+	* xetex.web: Fix bugs in
+	@<Attach subscript OpenType math kerning@> and
+	@<Attach superscript OpenType math kerning@>
+
 2020-05-04  Andreas Scherer  <https://ascherer.github.io>
 
 	* xetex.ch,
